--- a/index.html
+++ b/index.html
@@ -37,9 +37,17 @@
     </div>
 </nav>
 <!-- side Navbar -->
-<div class="side-navbar" style="display:none;">
-    <p><i id="side-navbar-close" class="fa-solid fa-xmark"></i></p>
-
+<div class="side-navbar">
+    <div class="side-navbar-close">
+        <i  class="fa-solid fa-xmark"></i>
+    </div>
+    <div class="side-navbar-links">
+        <p class="navbar-link"><a href="#home">Home</a></p>
+        <p class="navbar-link"><a href="#">New Arrival</a></p>
+        <p class="navbar-link"><a href="#Most Wanted">Most Wanted</a></p>
+        <p class="navbar-link"><a href="#Collection">Collection</a></p>
+        <p class="navbar-link"><a href="#Contact Us">Contact Us</a></p>
+    </div>
 </div>
 <!-- slide -->
 <div class="container">
@@ -53,13 +61,95 @@
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="slider-image-container">
-            <img class="slider-image" src="./image/slider-one.jpg" alt="">
-            <img class="slider-image" src="./image/slider-two.jpg" alt="">
-            <img class="slider-image" src="./image/slider-three.jpg" alt="">
+            <img class="slider-image" src="./image/slide/slider-one.jpg" alt="">
+            <img class="slider-image" src="./image/slide/slider-two.jpg" alt="">
+            <img class="slider-image" src="./image/slide/slider-three.jpg" alt="">
         </div>
         <div class="slider-right-button">
             <i class="fa-solid fa-angle-right" style="color:#ffffff;"></i>
         </div>
+    </div>
+</div>
+<!-- Brand -->
+<div class="brand">
+    <h1 class="brand-name">Brand</h1>
+    <div class="brand-icons">
+    <div class="brand-image">
+        <img src="./image/icons/adidas.png" alt="">
+        <p>adidas</p>
+    </div>
+    <div class="brand-image">
+        <img src="./image/icons/puma.png" alt="">
+        <p>Puma</p>
+    </div>
+    <div class="brand-image">
+        <img src="./image/icons/leaves.png" alt="">
+        <p>leaves</p>
+    </div>
+    <div class="brand-image">
+        <img src="./image/icons/nike.png" alt="">
+        <p>nike</p>
+    </div>
+    <div class="brand-image">
+        <img src="./image/icons/simple.png" alt="">
+        <p>simple</p>
+    </div>
+    <div class="brand-image">
+        <img src="./image/icons/twitch.png" alt="">
+        <p>twitch</p>
+    </div>
+    <div class="brand-image">
+        <img src="./image/icons/behance.png" alt="">
+        <p>behance</p>
+    </div>
+    </div>
+</div>
+<div class="expre">
+    <div class="expre-contant">
+        <div class="expre-contant-1">
+            <p>We Provide Best</p>
+            <p>Customer Experiences</p>
+        </div>
+        <div class="expre-contant-2">
+            <p>|| We ensure that our customer have the best shopping experience</p>
+        </div>
+    </div>
+</div>
+<div class="description">
+    <div>
+        <i style="font-size: 3vw;margin-bottom: 10px;" class="fa-regular fa-circle-check"></i>
+        <h4>Original Products</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, consequuntur.
+        </p>
+    </div>
+    <div>
+        <i style="font-size:3vw;margin-bottom:10px;" class="fa-regular fa-face-smile"></i>
+        <h4>Original Products</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, consequuntur.
+        </p>
+    </div>
+    <div>
+        <i style="font-size:3vw;margin-bottom:10px;" class="fa-solid fa-broom"></i>
+        <h4>Original Products</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, consequuntur.
+        </p>
+    </div>
+    <div>
+        <i style="font-size:3vw;margin-bottom:10px;" class="fa-solid fa-truck"></i>
+        <h4>Original Products</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, consequuntur.
+        </p>
+    </div>
+</div>
+<!-- new Arrivals -->
+<div class="arrival">
+    <h1>New Arrivals</h1>
+    <div class="arrival-box">
+        <div>
+            <img src="./image/products/n1.jpg" alt="">
+            <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+
     </div>
 </div>
 </body>
